More Fix for float(only) - vertical align right menus

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -117,6 +117,12 @@ $menu-item-background-hover: $light-gray !default;
       .submenu li {
         text-align: $global-left;
       }
+
+      &.vertical {
+        .submenu li {
+          text-align: $global-right;
+        }
+      }
     }
   }
   @else if $alignment == center {
